--- a/css/main.scss
+++ b/css/main.scss
@@ -45,5 +45,5 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
-        "syntax-highlighting","headers"
+        "syntax-highlighting","headers","buttons"
 ;
