--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -14,10 +14,6 @@ button{
   cursor: pointer;
   display: inline-block;
   line-height: 1;
-}
-  margin: {
-    top: .5em;
-    bottom: .5em;
-    right: .5em;
+  margin: 15px;
   }
 
