--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -1,2 +1,13 @@
 // Buttons
 
+.usa-button {
+  appearance: none;
+  background-color: #ccc;
+  border: 0;
+  font-size: 18px;
+  cursor: pointer;
+  display: inline-block;
+  line-height: 1;
+  margin: 15px;
+  }
+
