--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -15,4 +15,7 @@
   position: relative;
   text-decoration: none;
   vertical-align: top;
+  margin-bottom: 0.5em;
+  margin-right: 0.5em;
+  margin-top: 0.5em;
 }
