--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -1,6 +1,6 @@
 // Buttons
 
-.usa-button-active{
+.usa-button-active, .usa-button-hoover{
   background-color: #00823b;
   border: medium none;
   border-radius: 0;
