--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -1,6 +1,6 @@
 // Buttons
 
-.usa-button, .usa-button-active, .usa-button-hover, .usa-button-primary-alt{
+.usa-button-default, .usa-button-active, .usa-button-hover, .usa-button-primary-alt{
   background-color: #00823b;
   border: medium none;
   border-radius: 0;
