--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -11,7 +11,7 @@
   display: inline-block;
   font-size: 1em;
   line-height: 1.25;
-  padding: 0.2em 0.5em 0.2em;
+  padding: 10px 20px 10px;
   position: relative;
   text-decoration: none;
   vertical-align: top;
