--- a/css/main.scss
+++ b/css/main.scss
@@ -45,4 +45,4 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
-        "syntax-highlighting","headers","buttons";
+        "syntax-highlighting","headers","buttons","tables";
