initial style guide commit

--- a/_includes/colors.html
+++ b/_includes/colors.html
@@ -1,4 +1,4 @@
-<div id="colors">
+<section id="colors">
     <h2>02 | COLORS</h2>
     <div id="primary-colors">
         <div>Primary</div>
@@ -79,4 +79,4 @@
             </li>
         </ul>
     </div>
-</div>
+</section>
