adding existing font css

--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -1,3 +1,28 @@
-<section id="grid">
+<section id="typography">
     <h2>03 | TYPOGRAPHY</h2>
+    <ul class="typography-list">
+        <li>
+            <h1 id="">Interstate Bold 48px</h1>
+            <p>Page Title, Article Title</p>
+        </li>
+        <li>
+            <h2 id="">Interstate Bold 40px</h2>
+            <p>Section Header(UC), Leader Page Secondary position title(UC)</p>
+        </li>
+        <li>
+            <h3 id="">Interstate Bold 24px</h3>
+            <p>Sub-Section Header(UC)</p>
+        </li>
+        <li>
+            <h4 id="">Interstate Bold 21 px</h4>
+            <p>Sub-Section Header(UC)</p>
+        </li>
+        <li>
+            <h5 id="">Interstate Bold 21 px</h5>
+            <p>Sub-Section Header(UC)</p>
+        </li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 </section>
