--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -2,27 +2,36 @@
     <h2>03 | TYPOGRAPHY</h2>
     <ul class="typography-list">
         <li>
-            <h1 id="">Interstate Bold 48px</h1>
+            <h1 >Interstate Bold 48px</h1>
             <p>Page Title, Article Title</p>
         </li>
         <li>
-            <h2 id="">Interstate Bold 40px</h2>
+            <h2 >Interstate Bold 40px</h2>
             <p>Section Header(UC), Leader Page Secondary position title(UC)</p>
         </li>
         <li>
-            <h3 id="">Interstate Bold 24px</h3>
+            <h3 >Interstate Bold 30px</h3>
+            <p>Section Header(UC), Leader Page Secondary position title(UC)</p>
+        </li>
+        <li>
+            <h4 >Interstate Bold 24px</h4>
             <p>Sub-Section Header(UC)</p>
         </li>
         <li>
-            <h4 id="">Interstate Bold 21 px</h4>
+            <h5 >Interstate Bold 21 px</h5>
             <p>Sub-Section Header(UC)</p>
         </li>
         <li>
-            <h5 id="">Interstate Bold 21 px</h5>
-            <p>Sub-Section Header(UC)</p>
+            <p class="large">Interstate Bold 18px</p>
+            <p>Secondary Navigation(UC), Article Widget Title(TC)</p>
         </li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>
+            <p>Interstate Regular 16px</p>
+            <p>Body Text</p>
+        </li>
+        <li>
+            <p class="small medium-camo">Interstate Regular 14px/13px #83847a</p>
+            <p>Article Page Date/Author, Article Widgets Date(UC)</p>
+        </li>
     </ul>
 </section>
