default small p to medium camo

--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -30,7 +30,7 @@
             <p>Body Text</p>
         </li>
         <li>
-            <p class="small medium-camo">Interstate Regular 14px/13px #83847a</p>
+            <p class="small">Interstate Regular 14px/13px #83847a</p>
             <p>Article Page Date/Author, Article Widgets Date(UC)</p>
         </li>
     </ul>
