--- a/_includes/grid.html
+++ b/_includes/grid.html
@@ -1,3 +1,163 @@
 <section id="grid">
-    <h2>01 | GRID</h2>
+    <div class="container">
+        <div class="inner-container">
+           <h2>01 | GRID</h2> 
+        </div>
+    </div>
+    <div id="grid-example" class="container">
+        <p class="grid-example-container white black-background">1020px</p>
+        <div class="inner-container">
+            <div class="row">
+                <div class="span6">
+                    <p class="gold-background">1/2</p>
+                </div>
+               <div class="span6">
+                   <p class="gold-background">50%</p>
+               </div>
+            </div>
+            <div class="row">
+                <div class="span4">
+                    <p class="gold-background">1/3</p>
+                </div>
+               <div class="span4">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span4">
+                   <p class="gold-background">33%</p>
+               </div>
+            </div>
+            <div class="row">
+                <div class="span3">
+                    <p class="gold-background">1/4</p>
+                </div>
+               <div class="span3">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span3">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span3">
+                   <p class="gold-background">25%</p>
+               </div>
+            </div>
+            <div class="row">
+                <div class="span2">
+                    <p class="gold-background">1/6</p>
+                </div>
+               <div class="span2">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span2">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span2">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span2">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span2">
+                   <p class="gold-background">16.6%</p>
+               </div>
+            </div>
+            <div class="row">
+                <div class="span1">
+                    <p class="gold-background">1/12</p>
+                </div>
+               <div class="span1">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span1">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span1">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span1">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span1">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span1">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span1">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span1">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span1">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span1">
+                   <p class="gold-background">&nbsp;</p>
+               </div>
+               <div class="span1">
+                   <p class="gold-background">8.3%</p>
+               </div>
+            </div>
+            <div class="row">
+                <div class="span12">
+                    <p class="gold-background">&nbsp;</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span1">
+                    <p class="gold-background">55px</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span2">
+                    <p class="gold-background">140px</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span3">
+                    <p class="gold-background">225px</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span4">
+                    <p class="gold-background">310px</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span5">
+                    <p class="gold-background">395px</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span6">
+                    <p class="gold-background">480px</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span7">
+                    <p class="gold-background">565px</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span8">
+                    <p class="gold-background">650px</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span9">
+                    <p class="gold-background">735px</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span10">
+                    <p class="gold-background">820px</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span11">
+                    <p class="gold-background">905px</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
