--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -1,3 +1,8 @@
+
 <section id="elements">
-    <h2>04 | ELEMENTS</h2>
+    <div class="container">
+        <div class="inner-container">
+            <h2>04 | ELEMENTS</h2>
+        </div>
+    </div>
 </section>
