--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,7 @@
 ---
 
 @import "base/variables";
+@import "base/custom_mixins/custom-calc";
 @import "base/mixins/breakpoints";
 @import "base/mixins/clearfix";
 @import "base/reset";
