added iconography section

--- a/_includes/iconography.html
+++ b/_includes/iconography.html
@@ -1,8 +1,8 @@
 
-<section id="elements">
+<section id="iconography">
     <div class="container">
         <div class="inner-container">
-            <h2>05 | ELEMENTS</h2>
+            <h2>04 | ICONOGRAPHY</h2>
         </div>
     </div>
 </section>
