--- a/css/guide.scss
+++ b/css/guide.scss
@@ -5,6 +5,12 @@ section {
   margin-bottom: 20px;
 }
 
+.inner-container{
+    h2{
+        margin-bottom: 20px;
+    }
+}
+
 #grid-example {
   text-align: center;
   .grid-example-container{
