--- a/css/style.scss
+++ b/css/style.scss
@@ -17,6 +17,11 @@
 @import 'layout/grid';
 
 
+// ----------------------------------------------------------------------
+// Elements
+// ----------------------------------------------------------------------
+@import "elements/topstories";
+
 //primary colors
 .white {
   color: map-get($army-branding, white);
