--- a/css/style.scss
+++ b/css/style.scss
@@ -20,7 +20,7 @@
 // ----------------------------------------------------------------------
 // Elements
 // ----------------------------------------------------------------------
-@import "elements/topstories";
+@import "elements/top-stories";
 
 //primary colors
 .white {
