initial header js commit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,5 +11,6 @@
     <section id="main" class="main-content" role="main">
         {{ content }}
     </section>
+    {% include scripts.html %}
  </body>
 </html>
