--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,7 @@
 ---
 
 @import "base/variables";
-@import "base/custom_mixins/custom-calc";
+@import "base/custom-mixins/custom-calc";
 @import "base/mixins/breakpoints";
 @import "base/mixins/clearfix";
 @import "base/reset";
@@ -20,6 +20,8 @@
 // ----------------------------------------------------------------------
 // Elements
 // ----------------------------------------------------------------------
+@import "elements/buttons";
+@import "elements/header";
 @import "elements/top-stories";
 
 //primary colors
