--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -5,35 +5,35 @@
             <h2>03 | TYPOGRAPHY</h2>
             <ul class="typography-list">
                 <li>
-                    <h1 >Interstate Bold 48px</h1>
+                    <h1>H1 Overpass Bold 48px</h1>
                     <p>Page Title, Article Title</p>
                 </li>
                 <li>
-                    <h2 >Interstate Bold 40px</h2>
+                    <h2>H2 Overpass Bold 40px</h2>
                     <p>Section Header(UC), Leader Page Secondary position title(UC)</p>
                 </li>
                 <li>
-                    <h3 >Interstate Bold 30px</h3>
+                    <h3>H3 Overpass Bold 30px</h3>
                     <p>Section Header(UC), Leader Page Secondary position title(UC)</p>
                 </li>
                 <li>
-                    <h4 >Interstate Bold 24px</h4>
+                    <h4>H4 Overpass Bold 24px</h4>
                     <p>Sub-Section Header(UC)</p>
                 </li>
                 <li>
-                    <h5 >Interstate Bold 21 px</h5>
+                    <h5>H5 Overpass Bold 21 px</h5>
                     <p>Sub-Section Header(UC)</p>
                 </li>
                 <li>
-                    <p class="large">Interstate Bold 18px</p>
+                    <p class="large">Overpass Bold 18px</p>
                     <p>Secondary Navigation(UC), Article Widget Title(TC)</p>
                 </li>
                 <li>
-                    <p>Interstate Regular 16px</p>
+                    <p>Overpass Regular 16px</p>
                     <p>Body Text</p>
                 </li>
                 <li>
-                    <p class="small">Interstate Regular 14px/13px #83847a</p>
+                    <p class="small">Overpass Regular 14px/13px #83847a</p>
                     <p>Article Page Date/Author, Article Widgets Date(UC)</p>
                 </li>
             </ul>
