--- a/_scss/base/_variables.scss
+++ b/_scss/base/_variables.scss
@@ -139,6 +139,7 @@ $font-family: "Overpass", sans-serif;
 // Grid
 // ----------------------------------------------------------------------
 
+// Used in grid-system.scss
 // Number of columns in the grid.
 $grid-columns: 12 !default;
 
