--- a/_scss/base/mixins/_header-underline.scss
+++ b/_scss/base/mixins/_header-underline.scss
@@ -4,7 +4,7 @@
       content: '';
       display: block;
       height: 5px;
-      margin: 20px 0 0;
+      margin: 10px auto 0;
       width: 60px;
     }
 }
