--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -4,20 +4,24 @@
         <div class="inner-container">
             <h2>05 | ELEMENTS</h2>
             <div class="elem">
-                <div>LIST WIDGET</div>
+                <h4>LIST WIDGET</h4>
                 {% include elements/top-stories.html %}
             </div>
             <div class="elem">
-                <div>TAB BAR</div>
+                <h4>TAB BAR</h4>
                 {% include elements/nav.html %}
             </div>
             <div class="elem">
-                <div>BUTTONS</div>
+                <h4>BUTTONS</h4>
                 {% include elements/buttons.html %}
             </div>
             <div class="elem">
-                <div>ACCORDION</div>
+                <h4>ACCORDION</h4>
                 {% include elements/accordion.html %}
+            </div>
+            <div class="elem">
+                <h4>INLINE LINKS</h4>
+                {% include elements/inline-links.html %}
             </div>
         </div>
     </div>
@@ -32,7 +36,7 @@
     </div>
 </section>
 
-<section id="news-elements">
+<section id="list-elements">
     <div class="container">
         <div class="inner-container">
             <h4>LIST</h4>
