simple links list fixed

--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -23,24 +23,14 @@
                 <h4>INLINE LINKS</h4>
                 {% include elements/inline-links.html %}
             </div>
-        </div>
-    </div>
-</section>
-
-<section id="news-elements">
-    <div class="container">
-        <div class="inner-container">
-            <h4>NEWS</h4>
-            {% include elements/news.html %}
-        </div>
-    </div>
-</section>
-
-<section id="list-elements">
-    <div class="container">
-        <div class="inner-container">
-            <h4>LIST</h4>
-            {% include elements/list.html %}
+            <div class="elem">
+                <h4>LIST</h4>
+                {% include elements/list.html %}
+            </div>
+            <div class="elem">
+                <h4>NEWS</h4>
+                {% include elements/news.html %}
+            </div>
         </div>
     </div>
 </section>
