different take on the tab bar

--- a/_includes/colors.html
+++ b/_includes/colors.html
@@ -7,15 +7,15 @@
                 <ul class="color-list">
                     <li>
                         <div class="color-box white-background"></div>
-                        <p class="white">#FFFFFF</p>
+                        <p>#FFFFFF</p>
                     </li>
                     <li>
                         <div class="color-box gold-background"></div>
-                        <p class="gold">#FEC325</p>
+                        <p>#FEC325</p>
                     </li>
                     <li>
                         <div class="color-box army-black-background"></div>
-                        <p class="army-black">#231F20</p>
+                        <p>#231F20</p>
                     </li>
                 </ul>
             </div>
@@ -24,15 +24,15 @@
                 <ul class="color-list">
                     <li>
                         <div class="color-box dark-camo-background"></div>
-                        <p class="dark-camo">#333C33</p>
+                        <p>#333C33</p>
                     </li>
                     <li>
                         <div class="color-box medium-camo-background"></div>
-                        <p class="medium-camo">#83847A</p>
+                        <p>#83847A</p>
                     </li>
                     <li>
                         <div class="color-box light-camo-background"></div>
-                        <p class="light-camo">#BFB8AB</p>
+                        <p>#BFB8AB</p>
                     </li>
                 </ul>
             </div>
@@ -41,43 +41,43 @@
                 <ul class="color-list">
                     <li>
                         <div class="color-box black-background"></div>
-                        <p class="black">#030000</p>
+                        <p>#030000</p>
                     </li>
                     <li>
                         <div class="color-box grey90-background"></div>
-                        <p class="grey90">#1A1A1A</p>
+                        <p>#1A1A1A</p>
                     </li>
                     <li>
-                    <div class="color-box grey80-background"></div>
-                    <p class="grey80">#333333</p>
+                        <div class="color-box grey80-background"></div>
+                        <p>#333333</p>
                     </li>
                     <li>
                         <div class="color-box grey70-background"></div>
-                        <p class="grey70">#4C4C4C</p>
+                        <p>#4C4C4C</p>
                     </li>
                     <li>
                         <div class="color-box grey60-background"></div>
-                        <p class="grey60">#656565</p>
+                        <p>#656565</p>
                     </li>
                     <li>
                         <div class="color-box grey50-background"></div>
-                        <p class="grey50">#7F7F7F</p>
+                        <p>#7F7F7F</p>
                     </li>
                     <li>
                         <div class="color-box grey40-background"></div>
-                        <p class="grey40">#999999</p>
+                        <p>#999999</p>
                     </li>
                     <li>
                         <div class="color-box grey30-background"></div>
-                        <p class="grey30">#B3B3B3</p>
+                        <p>#B3B3B3</p>
                     </li>
                     <li>
                         <div class="color-box grey20-background"></div>
-                        <p class="grey20">#CCCCCC</p>
+                        <p>#CCCCCC</p>
                     </li>
                     <li>
                         <div class="color-box grey10-background"></div>
-                        <p class="grey10">#E5E5E5</p>
+                        <p>#E5E5E5</p>
                     </li>
                 </ul>
             </div>
