--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -7,10 +7,15 @@
                 <h4>LIST WIDGET</h4>
                 {% include elements/top-stories.html %}
             </div>
-            <div class="elem">
-                <h4>TAB BAR</h4>
-                {% include elements/nav.html %}
-            </div>
+        </div>
+    </div>
+    <!-- make tab bar full width -->
+    <div class="elem">
+        <h4>TAB BAR</h4>
+        {% include elements/nav.html %}
+    </div>
+    <div class="container">
+        <div class="inner-container">
             <div class="elem">
                 <h4>BUTTONS</h4>
                 {% include elements/buttons.html %}
@@ -20,16 +25,20 @@
                 {% include elements/accordion.html %}
             </div>
             <div class="elem">
-                <h4>INLINE LINKS</h4>
-                {% include elements/inline-links.html %}
+                <h4>PARAGRAPH DEFAULTS</h4>
+                {% include elements/paragraph-defaults.html %}
             </div>
             <div class="elem">
-                <h4>LIST</h4>
+                <h4>LINKS LIST</h4>
                 {% include elements/list.html %}
             </div>
             <div class="elem">
                 <h4>NEWS</h4>
                 {% include elements/news.html %}
+            </div>
+            <div class="elem">
+                <h4>HEADLINES WITH DATE</h4>
+                {% include elements/headlines.html %}
             </div>
         </div>
     </div>
