--- a/css/style.scss
+++ b/css/style.scss
@@ -32,8 +32,9 @@
 @import "elements/nav";
 @import "elements/buttons";
 @import "elements/news";
-@import "elements/links";
+@import "elements/lists";
 @import "elements/accordion";
+@import "elements/headlines";
 
 //primary colors
 .white {
